# HULP

./: .gitignore  CMakeLists.txt
examples/I2C/Bitbang/Single_mod/: CMakeLists.txt  sdkconfig.defaults
examples/I2C/Bitbang/Single_mod/main/: main.cpp
src/: hulp.c  hulp.h
